flex/flex-tests/testData/js2_highlighting/ProtectedMembersWithImplicitInheritance.js2
package {

public class <error descr="More than one externally visible symbol defined in file">ProtectedMembersWithImplicitInheritance</error> extends BaseClass {

    [Bindable]
    public var some:String;

    override public function toString():String{
        return localIndex.toString();
    }
}

class <error descr="Class 'BaseClass' should be defined in file 'BaseClass.js2'"><error descr="More than one externally visible symbol defined in file">BaseClass</error></error> {
    protected var localIndex;

    public function toString():String {
        return "";
    }
}

}